src/main/resources/css/style.css
/* ... */
header, nav, section, article, aside, footer, hgroup, time {
    display: block;
}

* {
    outline: none;
    font-family: 'Roboto script=all rev=1', sans-serif;
    font-style: normal;
    font-weight: 300;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-font-smoothing: antialiased;
    box-sizing: border-box;
}
ul {
    list-style: none;
}
b, strong {
    font-family: 'Roboto', sans-serif;
    font-weight: 700;
}
br {
    line-height: normal;
}
a {
    outline: none !important;
    color: #47d6ff;
    text-decoration: none;
    cursor: pointer;
}
a:hover {
    color: #47d6ff;
    text-decoration: underline;
}
a img {
    border: none;
}
p + p {
    margin-top: 20px;
}
html {
    height: 100%;
}
body {
    font-size: 16px;
    line-height: 30px;
    color: #535353;
    background-color: #eff6f9;
}
h1,
h2,
h3,
h4,
h5,
h6,
.large-12.columns .sect1 h2 strong,
.large-12.columns .sect1 h3 strong,
.large-12.columns .sect1 h4 strong,
.large-12.columns .sect1 h5 strong,
.large-12.columns .sect1 h6 strong,
.large-12.columns .sect1 h2 a.anchor:before,
.large-12.columns .sect1 h3 a.anchor:before,
.large-12.columns .sect1 h4 a.anchor:before,
.large-12.columns .sect1 h5 a.anchor:before,
.large-12.columns .sect1 h6 a.anchor:before {
    /*font: bold 22px/normal 'Roboto Slab', sans-serif;*/
    font-family: 'Roboto Slab', sans-serif;
    font-weight: bold;
    line-height: normal;
    letter-spacing: 0;
    color: #434343;
}

.large-12.columns .sect1 {
    width: 100%;
    overflow-x: auto;
}

h1 {
    font-size: 50px;
    line-height: 54px;
}
input {
    border: none !important;
    border-radius: 0 !important;
    outline: none;
}
textarea:focus,
input:focus,
select:focus,
.btn:focus {
    outline: none !important;
    box-shadow: none !important;
}
input[type=search] {
    -webkit-appearance: textfield;
    -webkit-box-sizing: content-box;
    font-family: inherit;
    font-size: 100%;
}
input::-webkit-search-decoration,
input::-webkit-search-cancel-button {
    display: none;
}

.container {
    position: relative;
    width: 100%;
    max-width: 1220px;
    padding: 0 40px;
}
.container-fluid {
    padding: 0 30px;
}
.row {
    margin: 0;
    position: relative;
}
.mobile-only {
    display: none;
}
.no-padding {
    padding: 0 !important;
}
.no-padding-top {
    padding-top: 0 !important;
}
.no-margin {
    margin: 0 !important;
}

/**
 * Header
 */
header {
    position: fixed;
    top: 0;
    z-index: 1000;
    height: 130px;
    width: 100%;
    background-color: #333333;
}
header .container {
    width: 100%;
    height: 130px;
}
header .container-fluid {
    height: 130px;
}
header .sidenav-trigger {
    float: left;
    width: 30px;
    height: 30px;
    margin: 50px 60px 0 0;
    -webkit-transition: .25s margin ease;
    -moz-transition: .25s margin ease;
    -o-transition: .25s margin ease;
    -ms-transition: .25s margin ease;
    transition: .25s margin ease;
}
header .sidenav-trigger a {
    float: left;
}
header .logo {
    float: left;
    width: 355px;
    overflow: hidden;
    margin-top: 35px;
    -webkit-transition: .25s margin ease;
    -moz-transition: .25s margin ease;
    -o-transition: .25s margin ease;
    -ms-transition: .25s margin ease;
    transition: .25s margin ease;
}
header .logo a {
    display: inline-block;
}
header .logo img {
    float: left;
    width: 64px;
    height: 64px;
}
header .logo .title {
    float: left;
    margin-left: 33px;
    font: bold 22px/64px 'Roboto Slab', sans-serif;
}
header .nav-wrapper {
    float: right;
    height: 130px;
    width: calc(100% - 445px);
    overflow: hidden;
    background-color: #333;
    -webkit-transition: .25s width ease;
    -moz-transition: .25s width ease;
    -o-transition: .25s width ease;
    -ms-transition: .25s width ease;
    transition: .25s width ease;
}

/**
 * Main Navingation
 */
.main-nav {
    /*width: 100%;*/
    width: 1000px;
    margin-top: 45px;
}
.main-nav a {
    display: inline-block;
    text-transform: uppercase;
    font: bold 16px 'Roboto', sans-serif;
}
.main-nav > ul {
    float: right;
}
.main-nav > ul > li {
    position: relative;
}
.main-nav > ul > li > a {
    color: white;
    padding-left: 0;
    padding-right: 0;
    margin-left: 17px !important;
    margin-right: 17px !important;
}
.main-nav > ul > li:last-child > a {
    margin-right: 0 !important;
}
.main-nav a:hover,
.main-nav a:active,
.main-nav a:focus,
.main-nav .active a,
.main-nav .active a:hover {
    border-radius: 0;
    background-color: transparent !important;
    text-decoration: none !important;
    color: #47d6ff !important;
}
.main-nav a:hover::before,
.main-nav .active a::before {
    content: '';
    position: absolute;
    bottom: -46px;
    width: 100%;
    height: 6px;
    background-color: #47d6ff;
}

.main-nav li:last-child {
    min-width: 47px;
}
.main-nav .search-btn,
.nav-wrapper.show-search .search-btn:hover {
    position: absolute;
    width: 30px;
    height: 30px;
    margin: 5px 0;
    float: left;
    background: url(../img/icon-search.svg) right center no-repeat;
    background-size: cover;
}
.main-nav .search-btn:hover {
    background-image: url(../img/icon-search-white.svg);
}
.main-nav .search-btn:hover::before {
    display: none;
}

.nav-wrapper .search-form {
    width: 0;
    height: 40px;
    line-height: 40px;
    float: right;
    overflow: hidden;
    -webkit-transition: .25s width ease;
    -moz-transition: .25s width ease;
    -o-transition: .25s width ease;
    -ms-transition: .25s width ease;
    transition: .25s width ease;
}
.nav-wrapper.show-search .search-form {
    width: 327px;
}
.nav-wrapper .search-form .form-group {
    margin: 0;
}
.nav-wrapper .search-form input[type="search"] {
    width: 250px;
    height: 28px;
    line-height: 40px;
    padding-left: 65px;
    border-radius: 4px !important;
}
@media (max-width: 1150px) {
    .nav-wrapper.show-search {
        width: 329px;
    }
}
/* ... */

